<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">台南1999 beta</string>
    <string name="action_settings">Settings</string>
    <string name="tainan_311">Tainan 1999 beta</string>
    <string name="title_activity_new_request">NewRequestActivity</string>
    <string name="title_activity_request_list">RequestListActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="next">下一步</string>
    <string name="previous">上一步</string>
    <string name="previous_tips">說明</string>
    <string name="next_to_report">點我開始</string>
    <string name="done">送出</string>
    <string name="msg_drag_pin">將箭頭對準問題發生位置</string>

    <string name="request_list_title">全部問題</string>
    <string name="status_not_taken">未處理</string>
    <string name="status_inprogress">處理中</string>
    <string name="status_finished">已完成</string>

    <string name="title">標題</string>
    <string name="description">描述</string>
    <string name="name">姓名</string>
    <string name="email">email</string>

    <string name="tips_title">怎麼回報問題</string>
    <string name="tips_ignore">下次不要再顯示此頁</string>
    <string name="tips_step1">把問題位置標記在地圖上</string>
    <string name="tips_step2">拍照或從相簿挑選照片</string>
    <string name="tips_step3">選擇行政區, 類型, 事項</string>
    <string name="tips_step4">描述問題</string>
    <string name="tips_step5">完成回報</string>
    <string name="tips_step1_no">1</string>
    <string name="tips_step2_no">2</string>
    <string name="tips_step3_no">3</string>
    <string name="tips_step4_no">4</string>
    <string name="tips_step5_no">5</string>
    <string name="title_activity_show_map">ShowMapActivity</string>
    <string name="title_activity_main_map">MainMapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="label_report">回報問題</string>
    <string name="no_data">新增失敗: 資料不完整</string>
    <string name="success">新增成功</string>
    <string name="failed">failed</string>
    <string name="text_setting">設定</string>
    <string name="text_about_us">關於我們</string>

    <string name="text_description">案件內容</string>
    <string name="text_agency">承辦機關</string>
    <string name="text_service_request_id">案件編號</string>
    <string name="text_service_name">類型</string>
    <string name="text_request_date">反映日期</string>
    <string name="text_updated_datetime">結案日期</string>
    <string name="text_expected_datetime">預計完成日期</string>
    <string name="text_location">問題地點</string>
    <string name="confirm_mail">初次使用或更改密碼需要郵件確認,請留意您的信箱</string>

    <string name="text_setting_general">一般</string>
    <string name="text_show_tips">顯示回報問題提示</string>
    <string name="text_show_tips_summary">在回報問題顯示提示</string>
    <string name="text_setting_report_issue">回報問題</string>
    <string name="text_issue_reporter_name">預設回報者名字</string>
    <string name="text_issue_input_reporter_name">請輸入回報者名字</string>
    <string name="text_no_default">沒有預設</string>
    <string name="text_issue_reporter_email">預設回報者電子信箱</string>
    <string name="text_issue_input_reporter_email">請輸入回報者電子信箱</string>
    <string name="hint_name">輸入你的名字</string>
    <string name="hint_desc">請簡潔的描述問題,\n可多行輸入。</string>
    <string name="hint_title">例如: 紅綠燈故障</string>
    <string name="detail_title">描述問題及送出回報</string>
    <string name="must_have">必填欄位</string>
    <string name="add_request">新增中...</string>
    <string name="add_failed">新增失敗:</string>
    <string name="str_empty">(無)</string>
    <string name="text_area">行政區</string>
    <string name="text_subproject">事項</string>
    <string name="phone">電話</string>
    <string name="address">地點</string>
    <string name="text_issue_reporter_phone">預設回報者電話</string>
    <string name="text_issue_input_reporter_phone">請輸入回報者電話</string>
    <string name="text_legal_notice">Legal Notices</string>
    <string name="text_my_activity">我的回報</string>
    <string name="text_confirm">確認送出</string>
    <string name="text_button_confirm">確認</string>
    <string name="text_confirm_message">點下確認按鈕會馬上送出您所填的資料到台南市民熱線網頁，包含您的姓名、電話、現在所在位置和E-mail</string>
    <string name="text_no_my_activity">沒有任何回報案件</string>
    <string name="text_error">錯誤發生</string>
    <string name="text_default_error">網站發生不預期的狀況，請稍候再試。離開此程式後再進入，謝謝。</string>
    <string name="text_add_fail">新增失敗</string>
    <string name="less_than_one_mb">照片大小限制小於 1 MB, 請重新選擇</string>
</resources>
