<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/text_setting_general">

        <CheckBoxPreference
            android:key="show_tips_preference"
            android:defaultValue="true"
            android:title="@string/text_show_tips"
            android:summary="@string/text_show_tips_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/text_setting_report_issue">

        <EditTextPreference
            android:key="reporter_name_preference"
            android:title="@string/text_issue_reporter_name"
            android:summary="@string/text_no_default"
            android:dialogTitle="@string/text_issue_input_reporter_name" />

        <EditTextPreference
            android:key="reporter_email_preference"
            android:title="@string/text_issue_reporter_email"
            android:summary="@string/text_no_default"
            android:dialogTitle="@string/text_issue_input_reporter_email" />

    </PreferenceCategory>
</PreferenceScreen>