<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="tn.opendata.tainan311.DetailActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_image_height"
                android:scaleType="fitCenter"
                android:visibility="gone"/>

            <TextView
                style="@style/TextView_DetailSubTitle"
                android:text="@string/text_service_request_id" />

            <TextView
                android:id="@+id/service_request_id"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextView_DetailSubTitle"
                android:text="@string/text_area" />

            <TextView
                android:id="@+id/area"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextView_DetailSubTitle"
                android:text="@string/text_service_name" />

            <TextView
                android:id="@+id/service_name"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextView_DetailSubTitle"
                android:text="@string/text_subproject" />

            <TextView
                android:id="@+id/subproject"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextView_DetailSubTitle"
                android:text="@string/text_description" />

            <TextView
                android:id="@+id/description"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextView_DetailSubTitle"
                android:text="@string/text_request_date" />

            <TextView
                android:id="@+id/request_date"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/ll_update_datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >
                <TextView
                    style="@style/TextView_DetailSubTitle"
                    android:text="@string/text_updated_datetime" />

                <TextView
                    android:id="@+id/updated_datetime"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_expected_datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >
                <TextView
                    style="@style/TextView_DetailSubTitle"
                    android:text="@string/text_expected_datetime" />

                <TextView
                    android:id="@+id/expected_datetime"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                style="@style/TextView_DetailSubTitle"
                android:text="@string/text_agency" />

            <TextView
                android:id="@+id/agency"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextView_DetailSubTitle"
                android:text="@string/text_location" />

            <fragment
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                class="com.google.android.gms.maps.MapFragment"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
